--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: sans-serif;
+  font-family: 'Optima', sans-serif;
 }
 
 a {
@@ -18,4 +18,25 @@ nav a {
 form div {
   margin: 1em;
   display: inline-block;
+}
+
+.products-container {
+  display: flex;
+  border: 0.8em solid black;
+}
+
+.item-container {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 50% 50%;
+  justify-items: center;
+  border: 0.8em dotted black;
+  padding: 2em;
+}
+
+.item {
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap;
+  border: 0.2em solid red;
 }
